--- a/.air.toml
+++ b/.air.toml
@@ -3,7 +3,7 @@ testdata_dir = "testdata"
 tmp_dir = "tmp"
 
 [build]
-  args_bin = ["-l 0"]
+  args_bin = ["-l 0", "convert", "-i tmp/test.html", "-o tmp/out.pdf"]
   bin = "./web2paper"
   cmd = "go build -buildvcs=false"
   delay = 100
@@ -23,6 +23,7 @@ tmp_dir = "tmp"
   include_dir = []
   include_ext = [
     "go",
+    "html",
   ]
   include_file = []
   kill_delay = "0s"
