--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.organization=dobefu
 sonar.projectName=Web2Paper
 
 sonar.sources=.
-sonar.exclusions=**/*_test.go
+sonar.exclusions=**/*_test.go,**/000_invalid_html/index.html
 
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
